service.yml
apiVersion: v1
kind: Service
metadata:
  name: icecream-api
  labels:
    app: icecream-api
spec:
  selector:
    app: icecream-api
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: LoadBalancer
